Fix button colour contrast issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ text-decoration-color: var(--secondary-color);
   padding: .25rem .75rem;
   border: none;
   border-radius: 15px;
-  color: var(--white-color);
+  color: #fff;
   background-color: var(--secondary-color);
   font-weight: 600;
   font-size: clamp(1.125rem, 1.5vw, 1.25rem);  
